# netopeer2

./: CMakeLists.txt
bin_pack/: install.sh
cli/: main.c
mpra_src/: CMakeLists.txt  mpra.c  mpra.h  mpra_version.h.in
mpra_src/user_rpcs/: get-user-bool-rpc.xml  get-user-rpc.xml  set-user-26-rpc.xml  set-user-27-rpc.xml  set-user-bool-false-rpc.xml  set-user-bool-true-rpc.xml  start-mpra-rpc.xml  stop-mpra-rpc.xml
mpra_src/yang_model/: aircond.yang  mplane-rpcs.yang
src/: main.c  mpra.h  netconf.c  netconf.h
tests/: np_test.h  test_rpc.c
